--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">quinn.bartlet</a></h1>
+						<h1><a href="index.html">quinn.bartlett</a></h1>
 						<nav>
 							<a href="#menu">quick links</a>
 						</nav>
