--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
 								<li><a href="index.html">Home</a></li>
 								<li><a href="generic.html">Experience</a></li>
 								<li><a href="elements.html">Projects</a></li>
-								<li><a href="#">Log In</a></li>
 								<li><a href="#">Contact Info</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
@@ -44,7 +43,7 @@
 					<section id="banner">
 						<div class="inner">
 <!--							<div class="logo"><span class="icon fa-gem"></span></div>-->
-							<div class="logo"><i class="icon fa-atom-simple"></i></div>
+							<div class="logo"><i class="icon solid fa-rocket"></i></div>
 							<h2>Quinn Bartlett </h2>
 							<p>welcome to my website. I am a fourth year Physics major at the University of British Columbia in Kelowna, BC.
 							I am passionate about physics and programming. I hope to continue to hone my skills in machine learning, quantum computing, medical physics, and quantum mechanics with the intent of persuing a career in these fields. </p>
@@ -68,7 +67,7 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/ex_website.png" alt="" /></a>
+									<a href="#" class="image"><img src="images/job.jpeg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Job Experience</h2>
 										<p>Have had the opportunity to gain professional experience in several sectors throughout my gradeschool and university career. </p>
@@ -80,7 +79,7 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/trophy.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Skills & Accomplishments</h2>
 										<p></p>
@@ -95,25 +94,25 @@
 									<h2 class="major">More About me</h2>
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/linac 2.png" alt="" class = "center" style="width:350px;height:300px;"/></a>
+											<a href="#" class="image"><img src="images/medphys.jpeg" alt="" class = /></a>
 											<h3 class="major">Medical Physics</h3>
 											<p>Projects completed during my time the first Alistair Ballie Medical Physics Student in the summer of 2021</p>
 											<a href="#" class="special">more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/machinelearning.jpeg" alt="" /></a>
 											<h3 class="major">Machince Learning</h3>
 											<p>Machine learning projects</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/quantumcomp.jpeg" alt="" /></a>
 											<h3 class="major">Quantum Computing</h3>
 											<p>Began investigating quantum computing in 2021, taking the qiskit quantum computing developer course through IBM </p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/other%20projetcs%20.jpeg" alt="" /></a>
 											<h3 class="major">Other Interests</h3>
 											<p>Other interests and activities</p>
 											<a href="#" class="special">Learn more</a>
@@ -131,7 +130,7 @@
 					<section id="footer">
 						<div class="inner">
 							<h2 class="major">Get in touch</h2>
-							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+							<p></p>
 							<form method="post" action="#">
 								<div class="fields">
 									<div class="field">
@@ -153,18 +152,16 @@
 							</form>
 							<ul class="contact">
 								<li class="icon solid fa-home">
-									Untitled Inc<br />
-									1234 Somewhere Road Suite #2894<br />
-									Nashville, TN 00000-0000
+									Kelowna, BC, Canada<br />
+
 								</li>
-								<li class="icon solid fa-phone">(000) 000-0000</li>
-								<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-								<li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
-								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
-								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
+								<li class="icon solid fa-phone">(705) 238-1528</li>
+								<li class="icon solid fa-envelope"><a href="#">quinnmichael3399@hotmail.com</a></li>
+								<li class="icon brands fa-github"><a href="https://github.com/quinn00">github</a></li>
+								<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/quinn-bartlett-2b10b11b9/">linkedin</a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li></li><li></a></li>
 							</ul>
 						</div>
 					</section>
